完成置换密码

--- a/Lab/CMakeLists.txt
+++ b/Lab/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Lab main.cpp password.h shift_password.cpp)
+add_executable(Lab1 lab1.cpp password.h pwd_shift.cpp pwd_singleTableReplace.cpp)
